リファクタリング
軽微な修正を行った。